<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_to"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/email_address"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/email_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:inputType="textCapSentences"
        android:hint="@string/title"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textSize="18sp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/email_message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:inputType="text"
        tools:ignore="TextFields"
        android:hint="@string/message"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <android.support.design.button.MaterialButton
        android:id="@+id/btn_send_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/email_send"
        android:textSize="25sp"/>


</LinearLayout>